--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: dart_code_metrics
 version: 5.7.6
-description: Software analytics tool that helps developers analyse and improve software quality.
+description: Software analytics tool that helps developers analyse and improve
+  software quality.
 homepage: https://dcm.dev/
 repository: https://github.com/dart-code-checker/dart-code-metrics
 issue_tracker: https://github.com/dart-code-checker/dart-code-metrics/issues
@@ -10,9 +11,9 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 platforms:
-  linux:
-  windows:
-  macos:
+  ? linux
+  ? windows
+  ? macos
 
 dependencies:
   analyzer: ">=5.1.0 <5.14.0"
@@ -25,13 +26,13 @@ dependencies:
   file: ^6.0.0
   glob: ^2.0.1
   html: ">=0.15.0 <1.0.0"
-  http: ^0.13.5
+  http: ^1.1.0
   meta: ^1.7.0
   path: ^1.8.0
-  platform: ^3.1.0 # overridden for lowest versions compatibility
+  platform: ^3.1.0
   pub_updater: ^0.3.0
   source_span: ^1.8.0
-  uuid: ^3.0.7
+  uuid: ^4.1.0
   xml: ">=5.3.0 <7.0.0"
   yaml: ^3.1.0
 
@@ -47,4 +48,4 @@ dev_dependencies:
     path: ./test/resources/test_lints
 
 executables:
-  metrics:
+  ? metrics
