--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ platforms:
   ? macos
 
 dependencies:
-  analyzer: ">=5.1.0 <5.14.0"
-  analyzer_plugin: ">=0.11.0 <0.12.0"
+  analyzer: ^6.3.0
+  analyzer_plugin: ^0.11.3
   ansicolor: ^2.0.1
   args: ^2.0.0
   collection: ^1.16.0
