--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ platforms:
 
 dependencies:
   analyzer: '>=5.12.0 <7.0.0'
-  analyzer_plugin: ^0.11.3
+  analyzer_plugin: ">=0.11.0 <0.12.0"
   ansicolor: ^2.0.1
   args: ^2.0.0
   collection: ^1.16.0
