--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ platforms:
   ? macos
 
 dependencies:
-  analyzer: '>=5.12.0 <7.0.0'
+  analyzer: ">=5.1.0 <5.14.0"
   analyzer_plugin: ">=0.11.0 <0.12.0"
   ansicolor: ^2.0.1
   args: ^2.0.0
